# pycheck

./: .gitattributes  .gitignore  Makefile  README.md  foo.py  pycheck  pycheck.py  pyproject.toml  test_pycheck.py
.github/workflows/: ci.yml
